Completed with test cases

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@
   .position-relative {
     position: relative;
   }
+  button {
+    cursor: pointer;
+  }
   .app-auto-complete {
     display: grid;
     place-items: center;
