--- a/src/components/InputField/input-field.scss
+++ b/src/components/InputField/input-field.scss
@@ -4,7 +4,7 @@
         display: block;
         margin-bottom: 5px;
     }
-    input[type='text'], input[type='search'] {
+    input {
         display: block;
         width: 100%;
         font-size: 16px;
@@ -14,6 +14,12 @@
         border: 1px solid #ccc;
         border-radius: 0;
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
+    .error-message {
+        text-align: left;
+        margin-top: 5px;
+        transition: .3s ease-out;
+        color: #ff0000d9;
     }
     .custom-input-validation.custom-checkbox-field {
         .position-relative {
